# dmi-mllam-verification-notebooks

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build-jupyterbook.yml
notebooks/: _config.yml  _toc.yml  danish_synop_stations.ipynb  index.ipynb  my_notebook.ipynb
src/dmi_mlverif_notebooks/: book_setup.py  constants.py  create_dummy_data.py  trigger_workflow.py
src/dmidc/: README.md  __init__.py
src/dmidc/harmonie/: __init__.py  load.py  utils.py
src/dmidc/metobs/: __init__.py
src/dmidc/metobs/dmi_opendata/: __init__.py  data.py  opendata_metobs_parameters.csv  parameter_metainfo.py  remote_api.py  stations.py  time_utils.py
